--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -16,11 +16,6 @@ $field-padding: 3px;
 $disabled-opacity: .4;
 
 
-.font-icon {
-    font-family: 'ui-font-solid';
-}
-
-
 body {
     color: $text-secondary;
     background-color: $bcg-darker;
@@ -85,7 +80,7 @@ a:visited {
         }
     }
     > header {
-        @include font-bold;
+        @extend .font-bold;
         background-color: $bcg-darker;
         color: $text-primary;
         font-size: 12px;
@@ -136,12 +131,9 @@ a:visited {
                 right: auto;
                 left: 0;
                 content: '\E113';
-                font-family: 'ui-font-solid';
+                @extend .font-icon;
                 font-size: 14px;
                 text-align: center;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-                font-smoothing: antialiased;
                 margin: 0;
                 padding: 0;
                 width: 32px;
@@ -278,12 +270,9 @@ a:visited {
             width: 16px;
             height: 16px;
             margin: 3px;
-            font-family: 'ui-font-solid';
+            @extend .font-icon;
             font-size: 10px;
             text-align: center;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            font-smoothing: antialiased;
             color: $text-secondary;
             text-align: center;
             line-height: 15px;
@@ -397,12 +386,9 @@ a:visited {
     &.container {
         > .title:after {
             content: '\E113';
-            font-family: 'ui-font-solid';
+            @extend .font-icon;
             font-size: 14px;
             text-align: center;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            font-smoothing: antialiased;
             background-color: transparent;
             color: $text-dark;
             line-height: 16px;
@@ -437,12 +423,9 @@ a:visited {
             }
         }
         > .icon {
-            font-family: 'ui-font-solid';
+            @extend .font-icon;
             font-size: 14px;
             text-align: center;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            font-smoothing: antialiased;
             background-color: transparent;
             color: $text-dark;
         }
@@ -809,12 +792,9 @@ a:visited {
             line-height: 20px;
             padding: 0;
             margin: 0;
-            font-family: 'ui-font-solid';
+            @extend .font-icon;
             font-size: 18px;
             text-align: center;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            font-smoothing: antialiased;
             color: $text-darkest;
             background-color: transparent;
             transform: rotate(90deg);
