tooltips improvements, assets, entities, viewport controls, whoisonline

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1393,7 +1393,13 @@ strong {
 
     > .content {
         > a {
+            display: block;
             margin-right: 4px;
+            float: left;
+
+            > img {
+                display: block;
+            }
         }
     }
 }
