--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -453,6 +453,73 @@ strong {
     }
 }
 
+.ui-tooltip {
+    &.reference {
+        > .inner {
+            max-width: 320px;
+            padding: 16px;
+            white-space: normal;
+
+            > h1 {
+                @extend .font-regular;
+                margin: 0;
+                line-height: normal;
+                font-size: 14px;
+                font-weight: normal;
+            }
+            > h2 {
+                @extend .font-regular;
+                margin: 8px 0 0;
+                line-height: normal;
+                font-size: 12px;
+                font-weight: normal;
+                color: $text-dark;
+            }
+            > p {
+                @extend .font-regular;
+                margin: 16px 0;
+                font-size: 12px;
+                font-weight: normal;
+                line-height: 20px;
+                font-weight: 100;
+                color: mix($text-dark, $text-primary, 50%);
+            }
+            > .reference {
+                display: inline-block;
+                height: 32px;
+                line-height: 32px;
+                padding: 0 0 0 16px;
+                font-size: 12px;
+                color: $text-primary;
+                background-color: $text-darkest;
+
+                &:hover {
+                    text-decoration: none;
+                    background-color: $text-active;
+
+                    &:after {
+                        background-color: mix($text-active, mix($bcg-darkest, #000, 75%), 50%);
+                    }
+                }
+
+                &:after {
+                    @extend .font-icon;
+                    content: '\E111';
+                    float: right;
+                    transform: rotate(-90deg);
+                    width: 32px;
+                    height: 32px;
+                    line-height: 32px;
+                    margin-left: 16px;
+                    font-size: 18px;
+                    text-align: center;
+                    background-color: $bcg-primary;
+                }
+            }
+        }
+    }
+}
+
 .ui-panel.attributes {
     &.foldable.horizontal {
         &.folded > .ui-header {
