--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -477,18 +477,23 @@ strong {
             }
             > p {
                 @extend .font-regular;
-                margin: 16px 0;
+                margin: 16px 0 0;
                 font-size: 12px;
                 font-weight: normal;
                 line-height: 20px;
                 font-weight: 100;
                 color: mix($text-dark, $text-primary, 50%);
+
+                &:first-child {
+                    margin-top: 0;
+                }
             }
             > .reference {
                 display: inline-block;
                 height: 32px;
                 line-height: 32px;
                 padding: 0 0 0 16px;
+                margin-top: 16px;
                 font-size: 12px;
                 color: $text-primary;
                 background-color: $text-darkest;
