--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -960,6 +960,36 @@ a:visited {
     }
 }
 
+// proxy
+.ui-number-field[proxy] {
+    position: relative;
+
+    &:before {
+        @extend .fieldFont;
+        content: attr(proxy);
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 0 8px;
+        line-height: 22px;
+        font-size: 12px;
+        font-weight: 100;
+        white-space: nowrap;
+        color: #999;
+    }
+    &:hover,
+    &.focus {
+        &:before {
+            content: none;
+        }
+    }
+}
+.ui-number-field[value] {
+    &:before {
+        content: none;
+    }
+}
+
 .ui-text-field {
     display: inline-block;
     border: 1px solid #666;
