--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -685,7 +685,6 @@ a:visited {
         background-color: $bcg-darker;
         border-color: $bcg-darker;
     }
-
     &:hover,
     &:focus {
         outline: 1px solid $text-primary;
@@ -696,9 +695,15 @@ a:visited {
             border-color: $text-primary;
         }
     }
-
     &.flash {
         @extend .ui-flash;
+    }
+    &.null {
+        > .color {
+            background-color: #000 !important;
+            background-image: linear-gradient(45deg, #fff 25%, transparent 25%, transparent), linear-gradient(-45deg, #fff 25%, transparent 25%, transparent), linear-gradient(45deg, transparent 75%, #fff 75%), linear-gradient(-45deg, transparent 75%, #fff 75%);
+            background-size: 24px 22px;
+        }
     }
 }
 
@@ -833,6 +838,18 @@ a:visited {
 
             &:after {
                 background-color: #7f7;
+            }
+        }
+    }
+    &.null {
+        &:after {
+            left: 8px;
+            background-color: rgba($text-dark, 0.25);
+        }
+        &:hover,
+        &:focus {
+            &:after {
+                background-color: rgba($text-dark, 0.5);
             }
         }
     }
