material multi-edit

--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -641,6 +641,13 @@ a:visited {
             }
         }
     }
+    &.null {
+        > .bar {
+            > .handle {
+                display: none;
+            }
+        }
+    }
 }
 
 .ui-text-field {
